--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,9 @@ body{
 
 #output-div{
     margin: 78px auto 0;
-    min-height:40px;
-    max-height:150px;
-    width:50%;
-    border:solid 4px gray; 
+    min-height: 60vh;
+    max-height:80vh;
+    width:70vw;
+    padding: 8px;
+    border:solid 1px gray; 
 }
