--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,30 @@
+:root{
+    --body-background-color:#F3F4F6;
+    --main-background-color:white
+}
+nav{
+    background-color: #FCD34D;
+    color:white
+    margin:0px;
+    padding:8px;
+    text-align:center;
+}
 body{
-    margin:auto;
+    /* margin:auto; */
     padding:3px;
-    
+    background-color: var(--body-background-color)
+}
+#main-content{
+    margin:2vh 10vh ;
+    background-color:var(--main-background-color);
+    padding: 16px;
 }
 #txt-area{
     display:block;
     border: ridge 4px;
     width:30%
 }
-
+/* 
 #output-div{
     margin: 78px auto 0;
     min-height: 60vh;
@@ -16,4 +32,68 @@ body{
     width:70vw;
     padding: 8px;
     border:solid 1px gray; 
+}*/
+#output-div{
+    background-color:#fffdd0;
+    display:flex;
+    margin: auto;
+    height: 70vh;
+    width: 80vh;
+    justify-content:center;
+    border: 1px grey ;
+    border-radius:2.5rem;
+    box-shadow: 4px 4px 16px;
+    vertical-align: middle;
+    flex-direction:column;
+    align-items: center;    
+} 
+#input-div1{
+    margin-bottom:5px;
+    background-color: white;
+    padding:8px;
+    text-align:center;
+    vertical-align: middle;
+    min-height:5vh;
+    max-height:10vh;
+    width:50vh;
+    border-radius:2.5rem;
+    box-shadow: 1px 1px 3px;
+}
+
+#input-div2{
+    margin-bottom:5px;
+    background-color: white;
+    padding:8px;
+    text-align:center;
+    /* vertical-align: middle; */
+    min-height:5vh;
+    max-height:10vh;
+    width:50vh;
+    border-radius:2.5rem;
+    box-shadow: 1px 1px 3px;
+}
+
+#input-div3{
+    margin-bottom:5px;
+    background-color: white;
+    padding:8px;
+    text-align:center;
+    /* vertical-align: middle; */
+    min-height:5vh;
+    max-height:10vh;
+    width:50vh;
+    border-radius:2.5rem;
+    box-shadow: 1px 1px 3px;
+}
+#input-div4{
+    margin-bottom:5px;
+    background-color: white;
+    padding:8px;
+    text-align:center;
+    vertical-align: middle;
+    min-height:5vh;
+    max-height:10vh;
+    width:50vh;
+    border-radius:2.5rem;
+    box-shadow: 1px 1px 3px;
 }
