--- a/styles.css
+++ b/styles.css
@@ -1,28 +1,40 @@
-:root{
-    --body-background-color:#F3F4F6;
-    --main-background-color:white
+:root {
+    /* Didn't feel the need to use it? */
 }
-nav{
+
+nav {
     background-color: #FCD34D;
-    color:white
-    margin:0px;
-    padding:8px;
-    text-align:center;
+    margin: 0px;
+    padding: 8px;
+    text-align: center;
 }
-body{
-    /* margin:auto; */
-    padding:3px;
-    background-color: var(--body-background-color)
+
+body {
+    margin-top: 0px;
+    background-image: url(https://images.unsplash.com/photo-1583361703300-bf0a4dc1723c?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8ZGljdGlvbmFyeSUyMHN2Z3xlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60;);
+
 }
-#main-content{
-    margin:2vh 10vh ;
-    background-color:var(--main-background-color);
+
+
+#main-content {
+    margin: 2vh 10%;
+    background-color: white;
     padding: 16px;
-}
-#txt-area{
+    /* min-height: 40vh; */
     display:block;
+    height: 80vh;
+    
+    border-radius: 2.5rem;
+
+}
+
+#txt-area {
+    display: inline-block;
     border: ridge 4px;
-    width:30%
+    width: 30%
+}
+#searchButton{
+
 }
 /* 
 #output-div{
@@ -33,67 +45,50 @@ body{
     padding: 8px;
     border:solid 1px gray; 
 }*/
-#output-div{
-    background-color:#fffdd0;
-    display:flex;
+#output-div {
+    background-color: #ffe39f;
+    display: block;
     margin: auto;
-    height: 70vh;
-    width: 80vh;
-    justify-content:center;
-    border: 1px grey ;
-    border-radius:2.5rem;
+    min-height: 65vh;
+    max-height: 100vh;
+    min-width:20%;
+    max-width: 60%;
+    justify-content: center;
+    border: 1px grey;
+    border-radius: 2.5rem;
     box-shadow: 4px 4px 16px;
     vertical-align: middle;
-    flex-direction:column;
-    align-items: center;    
-} 
-#input-div1{
-    margin-bottom:5px;
-    background-color: white;
-    padding:8px;
-    text-align:center;
-    vertical-align: middle;
-    min-height:5vh;
-    max-height:10vh;
-    width:50vh;
-    border-radius:2.5rem;
-    box-shadow: 1px 1px 3px;
+    flex-direction: column;
+    /* align-items: center; */
 }
 
-#input-div2{
-    margin-bottom:5px;
+/* .card-content {
+    margin-bottom: 5px;
     background-color: white;
-    padding:8px;
-    text-align:center;
-    /* vertical-align: middle; */
-    min-height:5vh;
-    max-height:10vh;
-    width:50vh;
-    border-radius:2.5rem;
+    padding: 8px;
+    align-items: center;
+    vertical-align: middle;
+    min-height: 10vh;
+    max-height: 40vh;
+    width: 50vh;
+    border-radius: 2.5rem;
     box-shadow: 1px 1px 3px;
+} */
+
+#input-div1 {
+    padding: 8px;
+
 }
 
-#input-div3{
-    margin-bottom:5px;
-    background-color: white;
-    padding:8px;
-    text-align:center;
-    /* vertical-align: middle; */
-    min-height:5vh;
-    max-height:10vh;
-    width:50vh;
-    border-radius:2.5rem;
-    box-shadow: 1px 1px 3px;
+#input-div2 {
+    padding: 8px;
+    
 }
-#input-div4{
-    margin-bottom:5px;
-    background-color: white;
-    padding:8px;
-    text-align:center;
-    vertical-align: middle;
-    min-height:5vh;
-    max-height:10vh;
-    width:50vh;
-    border-radius:2.5rem;
-    box-shadow: 1px 1px 3px;
+
+#input-div3 {
+    padding: 8px;
+}
+
+#input-div4 {
+    padding: 8px;
 }
