--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ body {
     border: 1px grey;
     border-radius: 2.5rem;
     box-shadow: 4px 4px 16px;
-    vertical-align: middle;
+    /* vertical-align: middle; */
     flex-direction: column;
     /* align-items: center; */
 }
