--- a/styles.css
+++ b/styles.css
@@ -21,9 +21,8 @@ body {
     background-color: white;
     padding: 16px;
     /* min-height: 40vh; */
-    display:block;
+    display: block;
     height: 80vh;
-    
     border-radius: 2.5rem;
 
 }
@@ -33,9 +32,21 @@ body {
     border: ridge 4px;
     width: 30%
 }
-#searchButton{
 
+/* .search_box {
+    display: flex;
+    width:30%;
 }
+#txt_area{
+    border: solid 4px red;
+    background: red;
+    
+    border-right: none;
+    height:20px;
+} */
+
+#searchButton {}
+
 /* 
 #output-div{
     margin: 78px auto 0;
@@ -51,7 +62,7 @@ body {
     margin: auto;
     min-height: 65vh;
     max-height: 100vh;
-    min-width:20%;
+    min-width: 20%;
     max-width: 60%;
     justify-content: center;
     border: 1px grey;
@@ -82,7 +93,7 @@ body {
 
 #input-div2 {
     padding: 8px;
-    
+
 }
 
 #input-div3 {
